<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.core</groupId>
  <artifactId>core-frmk</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>core-frmk</name>
  <url>http://maven.apache.org</url>

  <modules>
    <module>module-app</module>
    <module>module-tests</module>
    <module>module-tools</module>
  </modules>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <failIfNoTests>false</failIfNoTests>
    <suiteFile>../module-tests/src/test/resources/testng.xml</suiteFile>
    <allure.max.title.length>1000</allure.max.title.length>

    <allure.version>2.29.0</allure.version>
    <allure-maven.version>2.12.0</allure-maven.version>
    <aspectj.version>1.9.21</aspectj.version>
    <testng.version>7.7.0</testng.version>
    <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.16</version>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-maven</artifactId>
      <version>${allure-maven.version}</version>
      <exclusions>
        <exclusion>
          <groupId>antlr</groupId>
          <artifactId>antlr</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>5.4.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.uncommons</groupId>
      <artifactId>reportng</artifactId>
      <version>1.1.4</version>
      <exclusions>
        <exclusion>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>33.4.8-jre</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <argLine>
            -Dfile.encoding=${project.build.sourceEncoding}
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
          <argLine>
            --add-opens=java.base/java.lang=ALL-UNNAMED
          </argLine>
          <systemPropertyVariables>
            <org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
            <allure.max.title.length>${allure.max.title.length}</allure.max.title.length>
            <allure.results.directory>${project.basedir}/target/allure-results</allure.results.directory>
          </systemPropertyVariables>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <excludeDefaultDirectories>false</excludeDefaultDirectories>
          <outputDirectory>${project.basedir}/allure-report</outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>${allure-maven.version}</version>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
          <reportDirectory>${user.dir}/allure-report</reportDirectory>
        </configuration>
        <executions>
          <execution>
            <id>allure-results</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>remove-results</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>rm</executable>
              <arguments>
                <argument>-rf</argument>
                <argument>${project.basedir}/allure-results</argument>
                <argument>${project.basedir}/allure-report</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>${allure-maven.version}</version>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
          <reportDirectory>${user.dir}/allure-report</reportDirectory>
          <resultsDirectory>${project.basedir}/target/allure-results</resultsDirectory>
          <properties>
            <allure.issues.tracker.pattern>https://jira.example.org/browse/%s</allure.issues.tracker.pattern>
            <allure.tests.management.pattern>https://tms.example.org/browse/%s</allure.tests.management.pattern>
          </properties>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <repositories>
    <repository>
      <id>jcenter</id>
      <name>bintray</name>
      <url>http://jcenter.bintray.com</url>
    </repository>
  </repositories>
</project>